Make sure the edit button remains right-aligned

--- a/frontend/client/PastStreamCard.module.css
+++ b/frontend/client/PastStreamCard.module.css
@@ -104,6 +104,7 @@
   flex-direction: column;
   line-height: 1.25em;
   min-width: 0;
+  flex-grow: 1;
 }
 
 .title p {
